Update .gitignore to ignore nested Xcode user files
Use ** patterns to match xcuserdata and project.xcworkspace directories at any depth.

--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,8 @@
 DerivedData/
 *.swiftpm/
 Packages/
-*.xcodeproj/project.xcworkspace/
-*.xcodeproj/xcuserdata/
-*.xcworkspace/xcuserdata/
+**/xcuserdata/
+**/project.xcworkspace/
 
 # Build
 build/
